# libavif

.github/workflows/: ci-android-emulator-tests.yml  ci-android-jni.yml
android_jni/: ReadMe_Version.md  VersionRecord.md  build.gradle
android_jni/avifandroidjni/: build.gradle
android_jni/avifandroidjni/src/androidTest/: AndroidManifest.xml
android_jni/avifandroidjni/src/main/jni/: CMakeLists.txt
